--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "film_cataloging_final_project-",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://speedkon.github.io/Film_cataloging_final_project-/",
   "dependencies": {
     "@ant-design/icons": "^6.1.0",
     "@testing-library/dom": "^10.4.1",
@@ -20,7 +21,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
